# scalpwerk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/scalpwerk/: core.py  events.py  messaging.py  models.py
